--- a/react-speech-app/src/App.css
+++ b/react-speech-app/src/App.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Poppins', sans-serif;
-  background-image: url('images/10.jpg'); 
+/*   background-image: url('images/10.jpg');  */
+    background-image: url('10.jpg'); 
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat; 
